apps/media/libreddit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: libreddit-route
  namespace: libreddit
spec:
  parentRefs:
  - name: external
    namespace: gateway
  hostnames:
  - "libreddit.vanillax.me"
  rules:
  - backendRefs:
    - name: libreddit
      port: 8080
